# wyn-agent-x

./: README.md  pyproject.toml
demo/: demo - calling yfinance api.ipynb
pics/: SYSTEM_DIAGRAM.md
tests/: main.py  test.py
wyn_agent_x/: helper.py  list_of_apis.py  main.py  metadata.json
