[tool.poetry]
name = "wyn-agent-x"
version = "0.4.3"
description = "This package is an updated WYN-Agent package."
authors = ["Yiqiao Yin <eagle0504@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.44.1"
twilio = "^9.3.0"
google-search-results = "^2.4.2"
serpapi = "^0.1.5"
yfinance = "0.2.50"
fpdf = "1.7.2"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
